Fixed widget UL alignment.

--- a/sass/breakpoints/_40em-up.scss
+++ b/sass/breakpoints/_40em-up.scss
@@ -312,6 +312,8 @@ WIDGET STYLES
 		list-style: none;
 		margin:0;
 		padding: 0;
+		text-align: left; 
+
 
 		li{
 			margin: 0;
@@ -320,6 +322,7 @@ WIDGET STYLES
 	}
 
 }
+
 
 
 
