--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Bitbucket Theme URI: https://bitbucket.org/FlauntYourSite/padang-padang
 Author: Flaunt Sites
 Author URI: http://flauntsites.com
 Description: Designed to match the power and simplicity of one of Bali’s cleanest barreling waves. Drop in… Race through the tube… Get shot out in glory.
-Version: 0.3.5
+Version: 0.3.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: padang-padang
@@ -1783,7 +1783,8 @@ WIDGET STYLES
     .widget-contain ul {
       list-style: none;
       margin: 0;
-      padding: 0; }
+      padding: 0;
+      text-align: left; }
       .widget-contain ul li {
         margin: 0;
         padding: 0; }
